Fix: Double scroll bar fix.

--- a/Client/src/app/views/session/session.component.css
+++ b/Client/src/app/views/session/session.component.css
@@ -19,5 +19,5 @@
 .view-page{
   display: flex;
   flex-flow: column;
-  height: 93%;
+  max-height: 86.5%;
 }
