--- a/Client/src/app/views/view-page/view-page.component.css
+++ b/Client/src/app/views/view-page/view-page.component.css
@@ -1,5 +1,6 @@
 .web-iframe{
   display: block;
+  max-height: 86.5%;
   /*margin-top: 50px;*/
 }
 
